<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/loginRoot"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">

    <EditText
        android:id = "@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height = "wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>
    <EditText
        android:id = "@+id/usernameEt"
        android:layout_width="match_parent"
        android:layout_height = "wrap_content"
        android:hint="@string/username"/>

    <EditText
        android:id = "@+id/passwordEt"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "textPassword"
        android:hint="@string/password" />

    <Button
        android:id = "@+id/loginBtn"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:onClick = "login"
        android:text = "@string/login"
        android:layout_marginTop="20dp"
        />
    </LinearLayout>
</LinearLayout>