<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@+id/navigation_daily_plan">


<fragment
        android:id="@+id/navigation_calendar"
        android:name="rs.raf.projekat1.rafplaner.view.fragments.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_daily_plan"
        android:name="rs.raf.projekat1.rafplaner.view.fragments.DailyPlanFragment"
        android:label="@string/daily_plan"
        tools:layout="@layout/fragment_daily_plan" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="rs.raf.projekat1.rafplaner.view.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>