<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="rs.raf.projekat1.rafplaner.viewmodel.TaskFormViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/form_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.TaskFormActivity"
    android:orientation="vertical">
        <LinearLayout
            android:id="@+id/llPriorityForm"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnLowPriorityForm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:text="@string/low"
                android:backgroundTint="@color/lowPriority"
                android:layout_margin="5dp"/>


            <Button
                android:id="@+id/btnMediumPriorityForm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:text="@string/medium"
                android:backgroundTint="@color/mediumPriority"
                android:layout_margin="5dp"/>


            <Button
                android:id="@+id/btnHighPriorityForm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:text="@string/high"
                android:backgroundTint="@color/highPriority"
                android:layout_margin="5dp"/>

        </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/title"
        android:text="@={viewmodel.title}"
        android:id="@+id/etTitle"
        app:layout_constraintTop_toBottomOf="@id/llPriorityForm"/>

        <LinearLayout
            android:id="@+id/llTime"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/etTitle"
            android:gravity="center_horizontal">
            <TimePicker
                android:id="@+id/tpStart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_margin="8dp"
                android:hour="@={viewmodel.startTimeHour}"
                android:minute="@={viewmodel.startTimeMinute}"
                android:timePickerMode="spinner"/>

            <TimePicker
                android:id="@+id/tpEnd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_margin="8dp"
                android:hour="@={viewmodel.endTimeHour}"
                android:minute="@={viewmodel.endTimeMinute}"
                android:timePickerMode="spinner"/>

        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/description"
            android:text="@={viewmodel.description}"
            android:id="@+id/etDescription"
            app:layout_constraintTop_toBottomOf="@id/llTime"
            app:layout_constraintBottom_toTopOf="@id/llButtons"/>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="8dp"
            android:backgroundTint="@color/colorDecline"
            android:text="@string/cancel"
            />


        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_margin="8dp"
            android:backgroundTint="@color/colorAccept"
            android:text="@string/save"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>