<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.DailyPlanFragment">

    <LinearLayout
        android:id="@+id/llPriority"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rvDailyPlan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnLowPriority"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:text="@string/low"
            android:backgroundTint="@color/lowPriority"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btnMediumPriority"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:text="@string/medium"
            android:backgroundTint="@color/mediumPriority"
            android:layout_margin="5dp"/>


        <Button
            android:id="@+id/btnHighPriority"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:text="@string/high"
            android:backgroundTint="@color/highPriority"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDailyPlan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPriority"
        tools:listitem="@layout/task_list_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_plus_foreground"
        android:contentDescription="novo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/colorPrimary"
        android:layout_margin="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>